[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemy/enemy.gd" type="Script" id=1]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="DetectionsArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionsArea"]

[node name="Attack" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="body_entered" from="DetectionsArea" to="." method="_on_DetectionsArea_body_entered"]
[connection signal="body_exited" from="DetectionsArea" to="." method="on_body_exited"]
[connection signal="timeout" from="Attack" to="." method="on_timeout"]
